[tool.poetry]
name = "python_fluent_scanner"
version = "0.1.0"
description = ""
authors = ["Radim <58228032+Radim296@users.noreply.github.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
fluent-syntax = "^0.19.0"
pydantic = "^2.5.1"
termcolor = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
    fluent_scanner = "python_fluent_scanner:main"
